# SeisSegd

./: .gitmodules  README.md  meson.build
include/: SeisCommonSegd.h  meson.build
src/: SeisCommonSegd.c  meson.build
